--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -1,13 +1,18 @@
-FROM alpine:latest
+FROM node:14-alpine
 
 WORKDIR /cluster
 
-# Add Docker runtime
-RUN apk add --update --no-cache docker openrc
-RUN rc-update add docker boot
+# Add Docker runtime #openrc
+RUN apk add --update --no-cache docker iptables
 
+# RUN rc-update add docker boot
+# RUN dockerd
+# RUN service docker start
+# RUN sleep 50s
 COPY . .
 
-RUN chmod u+x ./start
+# RUN chmod u+x ./start
 
-CMD sh ./start
+RUN npm i -g nodemon
+
+CMD nodemon
